[package]
name = "dvk"
version = "0.1.0"
description = "Definitions and a dynamic loader for core Vulkan API"
authors = ["Vlad Shcherbakov <vlad.shcherbakov@gmail.com>"]
repository = "https://gitlab.com/vlsh/dvk.git"
readme = "README.md"
keywords = ["vk", "vulkan", "ffi", "api"]
license = "MIT"

[dependencies]
shared_library = "0.1.4"
libc = "0.2.11"
bitflags = "0.7.0"
