[package]
name = "demo"
version = "0.1.0"
authors = ["Vlad Shcherbakov <vlad.shcherbakov@gmail.com>"]
license = "MIT"
include = ["main.rs"]

[[bin]]
name = "demo"
path = "main.rs"

[target.'cfg(windows)'.dependencies]
libc = "0.2.11"
winapi = "0.2.7"
gdi32-sys = "0.2.0"
kernel32-sys = "0.2.2"
user32-sys = "0.2.0"
dvk_ext_debug_report = { git = "https://gitlab.com/vlsh/dvk_ext_debug_report.git" }
dvk_khr_surface = { git = "https://gitlab.com/vlsh/dvk_khr_surface.git" }
dvk_khr_win32_surface = { git = "https://gitlab.com/vlsh/dvk_khr_win32_surface.git" }
dvk = { git = "https://gitlab.com/vlsh/dvk.git" }